--- a/reframe/index.html
+++ b/reframe/index.html
@@ -39,13 +39,13 @@
 <script src="../js/jquery-3.1.1.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/jquery-toc.min.js"></script>
-<script src="../js/cscs.js"></script>
+<script src="../js/reframe.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="../../js/viewport-hack-surface-windows8.js"></script>
 
 <script>
-  cscs.setup_site_content("../html/base.html", "../SIDEBAR.md");
-  cscs.setup_markdown_page_content("README.md");
+  reframe.setup_site_content("../html/base.html", "../SIDEBAR.md");
+  reframe.setup_markdown_page_content("README.md");
 </script>
 </body>
 </html>
