--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="img/favicon.png">
+    <link rel="icon" href="/img/favicon.png">
 
     <title>CSCS User Portal</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="css/viewport-hack-surface-windows8.css" rel="stylesheet">
+    <link href="/css/viewport-hack-surface-windows8.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/fixed-nav-bar-footer.css" rel="stylesheet">
-    <link href="css/remark-corrections.css" rel="stylesheet">
+    <link href="/css/fixed-nav-bar-footer.css" rel="stylesheet">
+    <link href="/css/remark-corrections.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -35,15 +35,15 @@
     <!-- JavaScript core
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/marked.min.js"></script>
+    <script src="/js/marked.min.js"></script>
     <!-- <script src="js/remark.js"></script> -->
-    <script src="js/highlight.pack.js"></script>
-    <script src="js/jquery-3.1.1.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery-toc.min.js"></script>
-    <script src="js/reframe.js"></script>
+    <script src="/js/highlight.pack.js"></script>
+    <script src="/js/jquery-3.1.1.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery-toc.min.js"></script>
+    <script src="/js/reframe.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/viewport-hack-surface-windows8.js"></script>
+    <script src="/js/viewport-hack-surface-windows8.js"></script>
 
     <script>
       reframe.setup_site_content("html/home.html", "SIDEBAR.md");
