--- a/writing_checks/index.html
+++ b/writing_checks/index.html
@@ -7,7 +7,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="../../img/favicon.png">
+  <link rel="icon" href="../img/favicon.png">
 
   <title>Writing checks</title>
 
@@ -15,7 +15,7 @@
   <link href="../css/bootstrap.min.css" rel="stylesheet">
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <link href="../../css/viewport-hack-surface-windows8.css" rel="stylesheet">
+  <link href="../css/viewport-hack-surface-windows8.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="../css/fixed-nav-bar-footer.css" rel="stylesheet">
@@ -41,9 +41,9 @@
 <script src="../js/jquery-3.1.1.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/jquery-toc.min.js"></script>
-<script src="../js/reframe.min.js"></script>
+<script src="../js/reframe.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="../../js/viewport-hack-surface-windows8.js"></script>
+<script src="../js/viewport-hack-surface-windows8.js"></script>
 
 <script>
   console.log('window.location.origin: ' + window.location.origin);
