--- a/running/index.html
+++ b/running/index.html
@@ -7,7 +7,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="../../img/favicon.png">
+  <link rel="icon" href="../img/favicon.png">
 
   <title>Running</title>
 
@@ -41,7 +41,7 @@
 <script src="../js/jquery-toc.min.js"></script>
 <script src="../js/reframe.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="../../js/viewport-hack-surface-windows8.js"></script>
+<script src="../js/viewport-hack-surface-windows8.js"></script>
 
 <script>
   reframe.setup_site_content("../html/base.html", "../SIDEBAR.md");
