--- a/html/home.html
+++ b/html/home.html
@@ -26,7 +26,7 @@
       <div class="jumbotron">
         <h1>ReFrame</h1>
         <p>A Regression Framework for HPC</p>
-        <p><a class="btn btn-primary btn-lg reframe-prepend-domain" href="about/index.html" role="button">Learn more</a></p>
+        <p><a class="btn btn-primary btn-lg reframe-prepend-domain" href="/about/index.html" role="button">Learn more</a></p>
       </div>
     </div>
 
