--- a/writing_checks/index.html
+++ b/writing_checks/index.html
@@ -41,7 +41,7 @@
 <script src="../js/jquery-3.1.1.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/jquery-toc.min.js"></script>
-<script src="../js/reframe.js"></script>
+<script src="../js/reframe.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="../js/viewport-hack-surface-windows8.js"></script>
 
