--- a/usecases/index.html
+++ b/usecases/index.html
@@ -20,6 +20,8 @@
   <!-- Custom styles for this template -->
   <link href="../css/fixed-nav-bar-footer.css" rel="stylesheet">
   <link href="../css/remark-corrections.css" rel="stylesheet">
+    <link href="../css/prism.css" rel="stylesheet">
+
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -35,7 +37,7 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="../js/marked.min.js"></script>
 <!-- <script src="../../js/remark.js"></script> -->
-<!-- <script src="/js/highlight.pack.js"></script>  -->
+<script src="../js/prism.js"></script>
 <script src="../js/jquery-3.1.1.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/jquery-toc.min.js"></script>
