--- a/html/home.html
+++ b/html/home.html
@@ -22,13 +22,13 @@
  </div>
 </div>
 
-    <div class="container">
+    <!--<div class="container">
       <div class="jumbotron">
         <h1>ReFrame</h1>
         <p>A Regression Framework for HPC</p>
         <p><a class="btn btn-primary btn-lg reframe-prepend-domain" href="/about" role="button">Learn more</a></p>
       </div>
-    </div>
+    </div>-->
 
 <div id="cscs-body-container">
  <div class="container">
