--- a/html/base.html
+++ b/html/base.html
@@ -1,5 +1,26 @@
 <div class="cscs-global-nav">
- <div class="cscs-nav-logo">
+ <nav class="navbar navbar-default navbar-fixed-top">
+
+  <div class="container">
+
+   <div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+     <span class="sr-only">Toggle navigation</span>
+     <span class="icon-bar"></span>
+     <span class="icon-bar"></span>
+     <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand cscs-prepend-domain" href="/">ReFrame</a>
+   </div>
+
+   <div id="navbar" class="navbar-collapse collapse">
+    <div id="cscs-leftbar-markdown" class="cscs-leftbar-markdown">
+    </div>
+   </div>
+  </div>
+ </nav>
+
+ <!--<div class="cscs-nav-logo">
   <div class="container">
 
    <div class="col-md-5">
@@ -20,24 +41,31 @@
 
   </div>
  </div>
-</div>
+</div>-->
+
+
+
 
 <div id="cscs-body-container">
- <div class="container">
+  <div class="jumbotron">
+    <div class="container" id="cscs-jumbotron-content">
+    </div>
+  </div>
 
+ <div class="container">
   <div class="row">
-   <div class="col-md-3" id="cscs-header-content">
+   <!--<div class="col-md-3" id="cscs-header-content">
 
     <div class="cscs-leftbar">
      <div id="cscs-leftbar-markdown" class="cscs-leftbar-markdown dropdown open">
      </div>
     </div>
+    </div>-->
+
+    <div class="col-md-9" id="cscs-markdown-content">
     </div>
 
-    <div class="col-md-7" id="cscs-markdown-content">
-    </div>
-
-    <div class="col-md-2" id="cscs-rightbar">
+    <div class="col-md-3" id="cscs-rightbar">
      <nav id="toc" data-toggle="toc" class="cscs-sidebar hidden-xs hidden-sm"></nav>
     </div>
 
@@ -53,6 +81,19 @@
        Via Trevano 131<br />
        6900 Lugano<br />
        Switzerland</p>
+     </div>
+     <div class="col-md-4">
+       <div  style="margin-left: auto; margin-right: auto;">
+         <a class="hidden-sm hidden-xs" href="http://www.cscs.ch" target="_blank">
+          <img id="cscs-cscs-logo" src="//user.cscs.ch/img/logo_cscs.png" style="background-color: transparent; margin-top: 5px;">
+        </a>
+      </div>
+      <br />
+      <div  style="margin-left: auto; margin-right: auto;">
+        <a class="hidden-sm hidden-xs" href="https://www.ethz.ch" target="_blank" style="margin-left: auto; margin-right: auto;">
+          <img id="cscs-eth-logo" class="navbar-nav navbar-right" src="//user.cscs.ch/img/logo_ethz.png">
+        </a>
+      </div>
      </div>
     </div>
    </div>
