--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
     <![endif]-->
   </head>
   <body data-spy="scroll">
-    <div class="container">
-    </div>
     <div id="cscs-site-content">
     </div>
     <!-- JavaScript core
@@ -46,7 +44,7 @@
     <script src="js/viewport-hack-surface-windows8.js"></script>
 
     <script>
-      reframe.setup_site_content("html/home.html", "SIDEBAR.md");
+      reframe.setup_site_content("html/base.html", "SIDEBAR.md", "JUMBOTRON.md");
       reframe.setup_markdown_page_content("README.md");
     </script>
   </body>
