--- a/pipeline/index.html
+++ b/pipeline/index.html
@@ -21,7 +21,7 @@
   <link href="../css/fixed-nav-bar-footer.css" rel="stylesheet">
   <link href="../css/remark-corrections.css" rel="stylesheet">
   <link href="../css/prism.css" rel="stylesheet">
-  
+
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -46,7 +46,7 @@
 <script src="../js/viewport-hack-surface-windows8.js"></script>
 
 <script>
-  reframe.setup_site_content("../html/base.html", "../SIDEBAR.md");
+  reframe.setup_site_content("../html/base.html", "../SIDEBAR.md", "JUMBOTRON.md");
   reframe.setup_markdown_page_content("README.md");
 </script>
 </body>
