--- a/writing_checks/index.html
+++ b/writing_checks/index.html
@@ -45,7 +45,7 @@
 <script src="../js/viewport-hack-surface-windows8.js"></script>
 
 <script>
-  reframe.setup_site_content("../html/base.html", "../SIDEBAR.md");
+  reframe.setup_site_content("../html/base.html", "../SIDEBAR.md", "JUMBOTRON.md");
   reframe.setup_markdown_page_content("README.md");
 </script>
 </body>
