--- a/started/index.html
+++ b/started/index.html
@@ -15,7 +15,7 @@
   <link href="../css/bootstrap.min.css" rel="stylesheet">
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <link href="../../css/viewport-hack-surface-windows8.css" rel="stylesheet">
+  <link href="../css/viewport-hack-surface-windows8.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="../css/fixed-nav-bar-footer.css" rel="stylesheet">
@@ -46,7 +46,7 @@
 <script src="../js/viewport-hack-surface-windows8.js"></script>
 
 <script>
-  reframe.setup_site_content("../html/base.html", "../SIDEBAR.md");
+  reframe.setup_site_content("../html/base.html", "../SIDEBAR.md", "JUMBOTRON.md");
   reframe.setup_markdown_page_content("README.md");
 </script>
 </body>
