--- a/html/base.html
+++ b/html/base.html
@@ -10,7 +10,7 @@
      <span class="icon-bar"></span>
      <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand cscs-prepend-domain" href="/">ReFrame</a>
+    <a class="navbar-brand reframe-prepend-domain" href="/">ReFrame</a>
    </div>
 
    <div id="navbar" class="navbar-collapse collapse">
