Adding additional parts of the documentation

--- a/html/base.html
+++ b/html/base.html
@@ -1,5 +1,6 @@
 <div class="cscs-global-nav">
- <nav class="navbar navbar-default navbar-fixed-top">
+ <!--<nav class="navbar navbar-default navbar-fixed-top">-->
+  <nav class="navbar navbar-default">
 
   <div class="container">
 
