Fixing page header titles

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../img/favicon.png">
 
-  <title>Examples</title>
+  <title>Examples Regression Checks</title>
 
   <!-- Bootstrap core CSS -->
   <link href="../css/bootstrap.min.css" rel="stylesheet">
