--- a/configure/index.html
+++ b/configure/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../img/favicon.png">
 
-  <title>Use Cases</title>
+  <title>Site Configuration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="../css/bootstrap.min.css" rel="stylesheet">
