--- a/pipeline/index.html
+++ b/pipeline/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../img/favicon.png">
 
-  <title>Pipeline</title>
+  <title>Regression Pipeline</title>
 
   <!-- Bootstrap core CSS -->
   <link href="../css/bootstrap.min.css" rel="stylesheet">
