--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/marked.min.js"></script>
     <!-- <script src="js/remark.js"></script> -->
-    <script src="js/highlight.pack.js"></script>
+    <script src="js/prism.js"></script>
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery-toc.min.js"></script>
